<resources>
    <string name="app_name">MovieApp</string>
    <string name="api_key">56552041943-c923ar3cnalueu9mla7ebrd7ntoip8fp.apps.googleusercontent.com</string>
    <string name="movie_api_key">40d68d9f5b285c2cd29d122a6cb850cb</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_biggest_international_and_local_film_streaming">The biggest international and local film streaming</string>
    <string name="semper_in_cursus_magna_et_eu_varius_nunc_adipiscing_elementum_justo_laoreet_id_sem_semper_parturient">Semper in cursus magna et eu varius nunc adipiscing. Elementum justo, laoreet id sem semper parturient.</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="download">Download</string>
    <string name="person">Person</string>
    <string name="hello_smith">Hello, Smith</string>
    <string name="let_s_stream_your_favorite_movie">Let’s stream your favorite movie</string>
    <string name="searc_a_title">Searc a title..</string>
    <string name="black_panther_wakanda_forever">Black Panther: Wakanda Forever</string>
    <string name="on_march_2_2022">On March 2, 2022</string>
    <string name="categories">Categories</string>
    <string name="mostpopular">Most Popular</string>
    <string name="see_all">See All</string>
    <string name="type_title_categories_years_etc">Type title, categories, years, etc</string>
    <string name="today">Today</string>
    <string name="premium">Premium</string>
    <string name="spider_man_no_way">Spider-Man No Way..</string>
    <string name="_148_minutes">148 Minutes</string>
    <string name="pg_13">PG-13</string>
    <string name="action">Action</string>
    <string name="movie">Movie</string>
    <string name="recommend_for_you">Recommend for you</string>
    <string name="actors">Actors</string>
    <string name="movie_related">Movie Related</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="spider_man_no">Spider-Man No..</string>
    <string name="play">Play</string>
    <string name="story_line">Story Line</string>
    <string name="story">For the first time in the cinematic history of Spider-Man, our friendly neighborhood hero\'s identity is revealed, bringing his Super Hero responsibilities into conflict with his normal life and putting those he cares about most at risk.</string>
    <string name="more">More</string>
    <string name="cast_and_crew">Cast and Crew</string>
    <string name="jon_watts">Jon Watts</string>
    <string name="director">Directors</string>
    <string name="spider_man_no_way_home">Spider-Man No Way Home</string>
    <string name="_1_78_gb">1.78 GB</string>
    <string name="there_is_no_movie_yet">There is no movie yet!</string>
    <string name="find_your_movie_by_type_title_categories_years_etc">Find your movie by Type title, categories, years, etc</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="tiffany">Tiffany</string>
    <string name="tiffanyjearsey_gmail_com">Tiffanyjearsey@gmail.com</string>
    <string name="premium_member">Premium Member</string>
    <string name="new_movies_are_coming_for_you_download_now">New movies are coming for you, Download Now!</string>
    <string name="account">Account</string>
    <string name="member">Member</string>
    <string name="change_password">Change Password</string>
    <string name="general">General</string>
    <string name="notification">Notification</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="legal_and_policies">Legal and Policies</string>
    <string name="help_amp_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
</resources>