<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    android:layout_marginTop="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/poster"
        android:src="@drawable/spiderman"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:scaleType="fitXY"
        android:background="@drawable/spider"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rate_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/star"
        android:src="@drawable/star"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rate"
        android:text="4.5"
        android:textSize="12sp"
        android:textColor="@color/orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/star"
        android:layout_marginTop="12dp"
        android:layout_marginStart="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/premium"
        android:background="@drawable/premium_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/poster"
        android:layout_marginTop="9dp"
        android:layout_marginStart="24dp"
        android:text="@string/premium"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/spider_man_no_way"
        app:layout_constraintTop_toBottomOf="@id/premium"
        app:layout_constraintLeft_toRightOf="@id/poster"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/year"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toRightOf="@id/poster"
        android:text="2021"
        android:textColor="@color/grey"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        app:drawableStartCompat="@drawable/calendar"
        android:drawablePadding="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        app:layout_constraintTop_toBottomOf="@id/year"
        app:layout_constraintLeft_toRightOf="@id/poster"
        android:text="@string/_148_minutes"
        android:textColor="@color/grey"
        android:layout_marginTop="14dp"
        android:layout_marginStart="24dp"
        app:drawableStartCompat="@drawable/clock"
        android:drawablePadding="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pg_back"
        app:layout_constraintTop_toBottomOf="@id/year"
        app:layout_constraintLeft_toRightOf="@id/time"
        android:layout_marginTop="12dp"
        android:text="@string/pg_13"
        android:textColor="@color/prime_blue"
        android:textSize="12sp"
        android:paddingHorizontal="4dp"
        android:paddingVertical="4dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/film"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintLeft_toRightOf="@id/poster"
        android:text="@string/action"
        android:textColor="@color/grey"
        android:layout_marginTop="14dp"
        android:layout_marginStart="24dp"
        app:drawableStartCompat="@drawable/film"
        android:drawablePadding="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/divide"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintLeft_toRightOf="@id/film"
        android:text="@string/movie"
        android:textColor="@color/white"
        android:layout_marginTop="14dp"
        android:layout_marginStart="8dp"
        app:drawableStartCompat="@drawable/divider"
        android:drawablePadding="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>